--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: Mahmood Zamani's personal blog.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://mahmoodzamani.ir" 
 twitter_username: imahmoodz
-github_username:  imahmoodz
+github_username:  mahmoood
 codepen_username: imahmoodz
 instagram_username: imahmoodz
 
